# OpenGL-WorldGenerator

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: cpm.cmake
include/gfx/: gfx.hpp
include/glfw-helper/: glfw.hpp
include/perlin/: analyticPerlin.hpp  perlin.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
